<resources>
    <string name="app_name">TrainingToday</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Registre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="invalid_username">Email Incorreto</string>
    <string name="invalid_password">Senha Incorreta</string>
    <string name="login_failed">"Falha de login"</string>
    <string name="field_error">Campo obrigatório</string>
    <string name="save">Salvar</string>
    <string name="select_date">Selecione a data</string>
    <string name="observation">Observações</string>
    <string name="name_training">Nome</string>
    <string name="training">Treino</string>
    <string name="add">Adicionar</string>
</resources>