<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_gray"
    app:layout_constraintCircleRadius="10dp"
    >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Realize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white_gray"
            android:layout_marginHorizontal="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_training"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="15dp"
            app:boxBackgroundColor="@color/white_gray"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_observacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observation"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginVertical="15dp"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/DataButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:text="05/06/22"
            android:textColor="@color/blue_1"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BotaoRegistrar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/save"
            android:textColor="@color/blue_1"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="15dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>